--- a/chrome/css/inject.css
+++ b/chrome/css/inject.css
@@ -19,6 +19,11 @@
   text-align: center;
   text-transform: uppercase;
 }
+.bs-alert img {
+  height:25px;
+  width:25px;
+  vertical-align:text-bottom;
+}
 
 body.shift {
   margin-top: 40px;
@@ -28,8 +33,13 @@ body.shift {
   background: black;
   color: white;
   text-align: center;
-  margin: 8px 0;
+  margin: 8px;
   padding: 4px;
+}
+.bs-alert-inline img {
+height:16px;
+width:16px;
+vertical-align:text-bottom;
 }
 
 [class*="hint--"] {
